# lina

./: CMakeLists.txt  README.md  lina.sln
include/: matrix.h  quaternion.h  vector.h
include/work_in_progress/: lina_types.h
lina/: lina.h  lina_types.h  overlap.h
lina_unit_tests/: lina_unit_tests.vcxproj  main.cpp
unit_tests/: CMakeLists.txt  main.cpp
